--- a/src/main/webapp/IrisPages/index.xhtml
+++ b/src/main/webapp/IrisPages/index.xhtml
@@ -25,6 +25,7 @@
 
 	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
 	<tds:ScriptLink source="~/Scripts/masking.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Calculator/calculator.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
 </h:head>
 <h:body>
