Notes widget scripts
Added the notes widget scripts required to display and save the global
notes.

--- a/src/main/webapp/IrisPages/index.xhtml
+++ b/src/main/webapp/IrisPages/index.xhtml
@@ -27,6 +27,14 @@
 	<tds:ScriptLink source="~/Scripts/masking.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Calculator/calculator.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/main.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/base.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/dialog.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/dropdown.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/equation.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/factory.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/scratchpad.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/textarea.js"></tds:ScriptLink>
 </h:head>
 <h:body>
 	<div id="testShell"></div>
