Clear the word list cache
Word lists for items are loaded and cached separatly from the item they
are associated with. The Blackbox WordListPanel does not have a way to
clear the cached word list. I added a method to the WordListPanel to clear
the cache so items can be reloaded with a different word list. This is
used for the glossary accommodation.

--- a/src/main/webapp/IrisPages/index.xhtml
+++ b/src/main/webapp/IrisPages/index.xhtml
@@ -35,6 +35,7 @@
 	<tds:ScriptLink source="~/Scripts/Notes/factory.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Notes/scratchpad.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Notes/textarea.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/Notes/WordList/wl_extension.js"></tds:ScriptLink>
 </h:head>
 <h:body>
 	<div id="testShell"></div>
