Dictionary scripts and button
The dictionary button is only enabled when the dictionary accommodation is
loaded. The dictionary accommodation is not yet fully implemented. It
makes an API call to a dictionary URL that is defined in the settings.
Where that is set is not clear so the API call will be implemented at a
later date.

--- a/src/main/webapp/IrisPages/index.xhtml
+++ b/src/main/webapp/IrisPages/index.xhtml
@@ -25,6 +25,7 @@
 
 	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
 	<tds:ScriptLink source="~/Scripts/masking.js"></tds:ScriptLink>
+	<tds:ScriptLink source="~/Scripts/dictionary.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Calculator/calculator.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Notes/main.js"></tds:ScriptLink>
