--- a/src/main/webapp/IrisPages/index.xhtml
+++ b/src/main/webapp/IrisPages/index.xhtml
@@ -24,19 +24,9 @@
 	<!-- Required by CTB -->
 
 	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
-	<tds:ScriptLink source="~/Scripts/masking.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/dictionary.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Calculator/calculator.js"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/main.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/base.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/dialog.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/dropdown.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/equation.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/factory.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/scratchpad.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/textarea.js"></tds:ScriptLink>
-	<tds:ScriptLink source="~/Scripts/Notes/WordList/wl_extension.js"></tds:ScriptLink>
+	<tds:ResourcesLink file="~/Scripts/scripts_iris.xml" name="sample" />
 </h:head>
 <h:body>
 	<div id="testShell"></div>
