--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -20,7 +20,8 @@
 		};
 	</script>
 	<!-- Blackbox Seed -->
-	<script type="text/javascript" src="#{itempreviewDefaultBacking.blackboxHandler}"></script>
+	<!--<script type="text/javascript" src="#{itempreviewDefaultBacking.blackboxHandler}"></script>-->
+	<tds:ScriptLink type="text/javascript" source="~/Scripts/bundle.min.js" />
 	<!-- Required by CTB -->
 
 	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
