added more styles from practice and version

--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -32,7 +32,7 @@
 	<tds:CSSLink href="~/Projects/SBAC/css/modernItems.css" media="screen" type="text/css" rel="stylesheet" />
 
 	<!-- Module Styles -->
-	<tds:CSSLink id="CSSLink1" href="~/Scripts/ResponseRecovery/responserecovery.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink id="CSSLink1" href="~~/IrisStyles/ResponseRecovery/responserecovery.css" media="screen" type="text/css" rel="stylesheet" />
 
 	<!-- Widget Styles -->
 	<tds:CSSLink href="~/Scripts/Interaction/CSS/interaction.css" media="screen" type="text/css" rel="stylesheet" />
