Updated POM with newer dependencies and exclusions
The goal is to not require changes to the item renderer to be compiled into
student before being compiled into Iris. We still need to depend on student for
some things, but we are now pulling the the item-renderer and item-renderer-web
separatley, and no longer depending on the student.library.

--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -70,7 +70,7 @@
 
 	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
-	<tds:ResourcesLink file="~/Scripts/scripts_iris.xml" name="sample" />
+	<!--<tds:ResourcesLink file="~/Scripts/scripts_iris.xml" name="sample" />-->
 
 </h:head>
 <h:body>
