--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -62,6 +62,7 @@
 			preventShowOnLoad : true
 		};
 	</script>
+	<script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
 
 	<!-- Blackbox Seed -->
 	<!--<script type="text/javascript" src="#{itempreviewDefaultBacking.blackboxHandler}"></script>-->
