--- a/iris/src/main/webapp/IrisPages/sample.xhtml
+++ b/iris/src/main/webapp/IrisPages/sample.xhtml
@@ -8,11 +8,13 @@
 	<tds:ScriptLink source="~/Scripts/Libraries/jquery/jquery-1.10.2.min.js" type="text/javascript"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/Utilities/util_xdm.js" type="text/javascript"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/client.js" type="text/javascript"></tds:ScriptLink>
-	<!-- Styling for this page only and not for IRiS interface. -->
-	<tds:CSSLink href="~/IrisStyles/style.css" media="screen" type="text/css" rel="stylesheet" />
-	<tds:CSSLink href="~/IrisStyles/pagenavi-css.css" media="screen" type="text/css" rel="stylesheet" />
-	<tds:CSSLink href="~/IrisStyles/jd.css" media="screen" type="text/css" rel="stylesheet" />
-	<tds:CSSLink href="~/IrisStyles/jd_002.css" media="screen" type="text/css" rel="stylesheet" />
+	 <!--Styling for this page only and not for IRiS interface. -->
+	<!--<tds:CSSLink href="~/IrisStyles/style.css" media="screen" type="text/css" rel="stylesheet" />-->
+	<!--<tds:CSSLink href="~/IrisStyles/pagenavi-css.css" media="screen" type="text/css" rel="stylesheet" />-->
+	<!--<tds:CSSLink href="~/IrisStyles/jd.css" media="screen" type="text/css" rel="stylesheet" />-->
+	<!--<tds:CSSLink href="~/IrisStyles/jd_002.css" media="screen" type="text/css" rel="stylesheet" />-->
+	<tds:CSSLink href="~/Scripts/iris.samplestyles.combined.min.css" media="screen" type="text/css" rel="stylesheet" />
+
 
 	<!-- Commenting out following as blocked error issued for https->http request -->
 <!-- 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/container/assets/skins/sam/container.css" />
