Removed minified css, fixed toolbar in window. deleted css files not being used.

--- a/iris/src/main/webapp/IrisPages/sample.xhtml
+++ b/iris/src/main/webapp/IrisPages/sample.xhtml
@@ -9,11 +9,10 @@
 	<tds:ScriptLink source="~/Scripts/Utilities/util_xdm.js" type="text/javascript"></tds:ScriptLink>
 	<tds:ScriptLink source="~/Scripts/client.js" type="text/javascript"></tds:ScriptLink>
 	 <!--Styling for this page only and not for IRiS interface. -->
-	<!--<tds:CSSLink href="~/IrisStyles/style.css" media="screen" type="text/css" rel="stylesheet" />-->
-	<!--<tds:CSSLink href="~/IrisStyles/pagenavi-css.css" media="screen" type="text/css" rel="stylesheet" />-->
-	<!--<tds:CSSLink href="~/IrisStyles/jd.css" media="screen" type="text/css" rel="stylesheet" />-->
-	<!--<tds:CSSLink href="~/IrisStyles/jd_002.css" media="screen" type="text/css" rel="stylesheet" />-->
-	<tds:CSSLink href="~/Scripts/iris.samplestyles.combined.min.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/IrisStyles/style.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/IrisStyles/pagenavi-css.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/IrisStyles/jd.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/IrisStyles/jd_002.css" media="screen" type="text/css" rel="stylesheet" />
 
 
 	<!-- Commenting out following as blocked error issued for https->http request -->
@@ -60,7 +59,7 @@
 			<hr width="100%" style="display: block" />
 			<!-- IriS viewport -->
 			<!-- Note: Change the src below to whatever IRiS website you want to use.
-				Please now how the url only contains the context/application name and not 
+				Please now how the url only contains the context/application name and not
 				a page url and is terminated with a "/". This is required. Scripts use 
 				this root URL to create XHR end points and resources.
 			 -->
