--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:tds="http://airast.org/jsfcustom"
-	xmlns:p="http://java.sun.com/jsf/passthrough">
+	  xmlns:p="http://java.sun.com/jsf/passthrough">
 <h:head>
 	<!-- set character encoding -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -12,23 +12,61 @@
 	<!-- Prevents scaling -->
 	<meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
 
-	<tds:CSSLink href="~/Scripts/iris.styles.combined.min.css" media="screen" type="text/css" rel="stylesheet" />
 
+	<tds:CSSLink href="~/Scripts/Libraries/yahoo/yui2/build/menu/assets/skins/sam/menu.css" rel="stylesheet" type="text/css" />
+	<tds:CSSLink href="~/Scripts/Libraries/yahoo/yui2/build/button/assets/skins/sam/button.css" rel="stylesheet" type="text/css" />
+	<tds:CSSLink href="~/Scripts/Libraries/yahoo/yui2/build/container/assets/skins/sam/container.css" rel="stylesheet" type="text/css" />
+	<tds:CSSLink href="~/Scripts/Libraries/yahoo/yui2/build/resize/assets/skins/sam/resize.css" rel="stylesheet" type="text/css" />
 
+	<!-- Shell Styles -->
+	<tds:CSSLink href="~/Shared/CSS/Universal/frame.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/normalize.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/Universal/shell.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Projects/SBAC/css/modernShell.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/dialogs.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/accommodations.css" media="screen" type="text/css" rel="stylesheet" />
+
+	<!-- Content Styles -->
+	<tds:CSSLink href="~/Shared/CSS/items.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/elpa.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Shared/CSS/Universal/items.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Projects/SBAC/css/modernItems.css" media="screen" type="text/css" rel="stylesheet" />
+
+	<!-- Module Styles -->
+	<tds:CSSLink id="CSSLink1" href="~/Scripts/ResponseRecovery/responserecovery.css" media="screen" type="text/css" rel="stylesheet" />
+
+	<!-- Widget Styles -->
+	<tds:CSSLink href="~/Scripts/Interaction/CSS/interaction.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/EquationEditor3/eq_editor.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/EquationEditor3/custom_eq_editor.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/LineReader/lineReader.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/MatchItem/mi.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Slideshow2/show.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Mask/mask.css" media="screen" type="text/css" rel="stylesheet" />
+
+	<tds:CSSLink href="~/Scripts/Simulator2/Renderer/CSS/simulator.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Simulator2/Renderer/CSS/slider.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/HTMLEditor2/editor.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/EditTask/edit.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Scaffolding/asi.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/EBSR/ebsr.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/TableInput/base.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Scratchpad/scratchpad.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Moogle/CSS/moogle.css" media="screen" type="text/css" rel="stylesheet" />
+	<tds:CSSLink href="~/Scripts/Audio2/ClosedCaptioning.css" media="screen" type="text/css" rel="stylesheet" />
 
 	<!-- Blackbox Config -->
 	<script type="text/javascript">
-		var blackboxConfig = {
-			container : 'testShell',
-			preventShowOnLoad : true
-		};
+        var blackboxConfig = {
+            container : 'testShell',
+            preventShowOnLoad : true
+        };
 	</script>
 
 	<!-- Blackbox Seed -->
 	<tds:ScriptLink type="text/javascript" source="~/Scripts/iris.combined.min.js" />
 	<!-- Required by CTB -->
 
-	<tds:CSSLink href="~/IrisStyles/iris.css" media="screen" type="text/css" rel="stylesheet" />
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
 
 </h:head>
