Squashed commit of the following:
commit b73b08cd7d9ff2d48f2392a9f83947164eb48306
Author: Alex Lepinski <alex.lepinski@oregonstate.edu>
Date:   Wed Aug 30 20:48:23 2017 -0700

    Added tutorial, added student backing for dialog, added handler, added
    method to load tutorial

commit 605cffba51a4138efe8e949837e6b7641a54be12
Merge: c5f184d ba4ad94
Author: Alex Lepinski <alex.lepinski@oregonstate.edu>
Date:   Wed Aug 30 17:42:12 2017 -0700

    Merge branch 'release-3.2' into feat/tutorial

commit c5f184dc5a90c508217fcf7ee5e6925b766accc4
Author: Alex Lepinski <alex.lepinski@oregonstate.edu>
Date:   Tue Aug 29 21:50:38 2017 -0700

    added from tds student

--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -72,5 +72,32 @@
 </h:head>
 <h:body>
 	<div id="testShell"></div>
+
+
+
+<div id="dialogs">
+
+	<div id="loadingDialog">
+		<span class="border yui-panel"> <span class="container">Loading graphic</span>
+			<div id="loadingMessage" class="bd"></div>
+		</span>
+	</div>
+
+	<div id="dialogContent" class="">
+		<div class="dialogWrapper">
+			<div id="dialogContentHeader">
+				<span id="dialogContentTitle"></span> <span id="dialogContentClose"><a href="#" i18n-content="TestShell.Link.HelpGuide.Close"></a></span>
+			</div>
+
+			<div id="dialogContentFrames"></div>
+
+			<div id="dialogContentControls" class="">
+				<a class="greenBtn" href="#"><span i18n-content="TestShell.Link.CloseTutorial.Yes"></span></a> <a class="redBtn" href="#"><span i18n-content="TestShell.Link.CloseTutorial.No"></span></a> <span
+					class="clear"></span>
+			</div>
+		</div>
+	</div>
+
+</div>
 </h:body>
 </html>
