--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -64,7 +64,7 @@
 	</script>
 
 	<!-- Blackbox Seed -->
-	<tds:ScriptLink type="text/javascript" source="~/Scripts/iris.combined.min.js" />
+	<tds:ScriptLink type="text/javascript" source="~/Scripts/iris.combined.js" />
 	<!-- Required by CTB -->
 
 	<tds:ScriptLink source="~/Scripts/iris.js" type="text/javascript"></tds:ScriptLink>
