added bluebird polyfill fixes #15

--- a/iris/src/main/webapp/IrisPages/index.xhtml
+++ b/iris/src/main/webapp/IrisPages/index.xhtml
@@ -55,6 +55,8 @@
 	<tds:CSSLink href="~/Scripts/Moogle/CSS/moogle.css" media="screen" type="text/css" rel="stylesheet" />
 	<tds:CSSLink href="~/Scripts/Audio2/ClosedCaptioning.css" media="screen" type="text/css" rel="stylesheet" />
 
+	<!--Bluebird promise polyfill -->
+	<script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
 	<!-- Blackbox Config -->
 	<script type="text/javascript">
         var blackboxConfig = {
